--- a/package.json
+++ b/package.json
@@ -28,13 +28,21 @@
     "@babel/preset-env": "^7.10.2",
     "@babel/preset-react": "^7.10.1",
     "@fortawesome/fontawesome-pro": "^5.13.0",
+    "aos": "^2.3.4",
     "babel-loader": "^8.1.0",
+    "bootstrap": "^4.5.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.5.3",
     "cssnano": "^4.1.10",
     "file-loader": "^6.0.0",
+    "jquery": "^3.5.1",
+    "jquery-countdown": "^2.2.0",
+    "jquery-ui": "^1.12.1",
+    "jquery.easing": "^1.4.1",
+    "jquery.sticky": "^0.2.1",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
+    "popper.js": "^1.16.1",
     "postcss-loader": "^3.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
