Minor data chnages

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -42,7 +42,7 @@
         "desc_4": "The Discover Deep Cove application can be downloaded by clicking on ‘see project’ link below. Features include a knowledge base with photos and sound clips to help identify wildlife, quizzes, and an interactive map with activities linked to QR codes in the area."
     },
     {
-        "name": "Fight For Kidz",
+        "name": "Fight for Kidz",
         "images": [
             {
                 "src": "/dist/images/f4k-landing.png",
@@ -82,7 +82,7 @@
         "aboutClient": "Fight for Kidz is a charity boxing event held in Southland raising funds for kid's charities. All funds raised stay in Southland. This event has been running since 2003 and raised almost $700,000.",
         "moreInfo": "Projects/Fight-for-Kidz",
         "tagline": "Web application and CMS for the Fight for Kidz charity boxing organization",
-        "desc_1": "I worked as part of a team of four students to develop a web application for Fight for Kidz, a non-profit organisation that runs a charity boxing events in Invercargill fundraising for charities that work with our most vulnerable children.\n This project was for a second year Project Management paper",
+        "desc_1": "I worked as part of a team of four students to develop a web application for Fight for Kidz, a non-profit organisation that runs a charity boxing events in Invercargill fundraising for charities that work with our most vulnerable children. This project was for a second year Project Management paper",
         "desc_2": "The website features a content management system that allows Fight for Kidz to manage applications for each event, helping them streamline their processes and publicise their events.",
         "desc_3": "My role as Junior Web Developer led to me working in part on various aspects of the website, including but not limited to design, responsiveness, back end and CMS.",
         "desc_4": "Recently, I have been helping to intergrate React into various aspects of the site to improve functionality and usability of the site"
