--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.5.3",
     "cssnano": "^4.1.10",
+    "express": "^4.17.1",
     "file-loader": "^6.0.0",
     "jquery": "^3.5.1",
     "jquery-countdown": "^2.2.0",
