--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -24,20 +24,8 @@ jobs:
   release:
     runs-on: ubuntu-latest
     if: github.event_name == 'push'
+    # Ensure our tests pass before we start the Release job
     needs: tests
-
-    steps:   
-      - uses: actions/checkout@v2
-      - name: docker build
-        run: docker build --build-arg NPM_TOKEN=${{secrets.NPM_TOKEN}} . --file Dockerfile
-        
-      
-
-  push:
-    # Ensure test job passes before pushing image.
-    needs: tests
-    runs-on: ubuntu-latest
-    if: github.event_name == 'push'
 
     steps:
       - uses: actions/checkout@v2
