--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "version": "2.0.0",
-  "description": "Mitchell's new React Powered portfolio which will be hosted on Github Pages",
+  "description": "Mitchell's new React powered portfolio.",
   "main": "index.js",
   "scripts": {
     "build": "webpack --progress --profile",
