--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "jquery.easing": "^1.4.1",
     "jquery.sticky": "^0.2.1",
     "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^7.0.0",
     "popper.js": "^1.16.1",
     "postcss-loader": "^3.0.0",
     "react": "^16.14.0",
@@ -55,5 +54,8 @@
     "url-loader": "^4.1.1",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
+  },
+  "devDependencies": {
+    "sass": "^1.49.7"
   }
 }
