--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -32,10 +32,10 @@
             "apple": ""
         },
         "developers": [
-            {"name": "Mitchell Quarrie", "github": "mitchellq", "linkedin": "https://www.linkedin.com/in/mitchellq/"},
-            {"name": "Jacques Theron", "github": "Jacques15", "linkedin": "https://www.linkedin.com/in/jacques-theron-407777205/"},
-            {"name": "Jono Tew", "github": "jonathanptew", "linkedin": "https://www.linkedin.com/in/jonathanptew/"},
-            {"name": "Maria Abastillas", "github": "sempersavii", "linkedin": "https://www.linkedin.com/in/maria-abastillas-dev/"}
+            {"name": "Mitchell Quarrie", "github": "https://github.com/mitchellq", "linkedin": "https://www.linkedin.com/in/mitchellq/"},
+            {"name": "Jacques Theron", "github": "https://github.com/Jacques15", "linkedin": "https://www.linkedin.com/in/jacques-theron-407777205/"},
+            {"name": "Jono Tew", "github": "https://github.com/jonathanptew", "linkedin": "https://www.linkedin.com/in/jonathanptew/"},
+            {"name": "Maria Abastillas", "github": "https://github.com/sempersavii", "linkedin": "https://www.linkedin.com/in/maria-abastillas-dev/"}
         ],
         "client": "Revived Design",
         "clientLogo": "/dist/images/projects/revived/revived-design-logo.png",
@@ -69,9 +69,9 @@
             "apple": ""
         },
         "developers": [
-            {"name": "Mitchell Quarrie", "github": "mitchellq", "linkedin": "https://www.linkedin.com/in/mitchellq/"},
-            {"name": "Samuel Grant", "github": "samuelgrant", "linkedin": "https://www.linkedin.com/in/samueljegrant/"},
-            {"name": "Sam Jackson", "github": "jacksos101", "linkedin": "https://www.linkedin.com/in/sam-jackson-285002169/"}
+            {"name": "Mitchell Quarrie", "github": "https://github.com/mitchellq", "linkedin": "https://www.linkedin.com/in/mitchellq/"},
+            {"name": "Samuel Grant", "github": "https://github.com/samuelgrant", "linkedin": "https://www.linkedin.com/in/samueljegrant/"},
+            {"name": "Sam Jackson", "github": "https://github.com/jacksos101", "linkedin": "https://www.linkedin.com/in/sam-jackson-285002169/"}
         ],
         "client": "Deep Cove Outdoor Education Trust",
         "clientLogo": "/dist/images/projects/deep-cove/deep-cove-logo.png",
@@ -102,9 +102,9 @@
             "apple": ""
         },
         "developers": [
-            {"name": "Mitchell Quarrie", "github": "mitchellq", "linkedin": "https://www.linkedin.com/in/mitchellq/"},
-            {"name": "Samuel Grant", "github": "samuelgrant", "linkedin": "https://www.linkedin.com/in/samueljegrant/"},
-            {"name": "Sam Jackson", "github": "jacksos101", "linkedin": "https://www.linkedin.com/in/sam-jackson-285002169/"}
+            {"name": "Mitchell Quarrie", "github": "https://github.com/mitchellq", "linkedin": "https://www.linkedin.com/in/mitchellq/"},
+            {"name": "Samuel Grant", "github": "https://github.com/samuelgrant", "linkedin": "https://www.linkedin.com/in/samueljegrant/"},
+            {"name": "Sam Jackson", "github": "https://github.com/jacksos101", "linkedin": "https://www.linkedin.com/in/sam-jackson-285002169/"}
         ],
         "client": "Fight for Kidz",
         "clientLogo": "/dist/images/projects/f4k/f4k-logo.png",
